k8s/product-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: product-service
    service: product
spec:
  type: ClusterIP
  ports:
  - port: 8001
    targetPort: 8001
    protocol: TCP
    name: http
  selector:
    app: product-service
